--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,12 @@
+AddDefaultCharset utf-8
+AddCharset utf-8 *
+
+# Mod_Charset
+<IfModule mod_charset.c>
+    CharsetSourceEnc utf-8
+    CharsetDefault utf-8
+</IfModule>
+
 # Mod_Autoindex
 <IfModule mod_autoindex.c>
 	# Запрещаем просмотр содержимого папок
