--- a/application/frontend/web/.htaccess
+++ b/application/frontend/web/.htaccess
@@ -1,3 +1,12 @@
+AddDefaultCharset utf-8
+AddCharset utf-8 *
+
+# Mod_Charset
+<IfModule mod_charset.c>
+    CharsetSourceEnc utf-8
+    CharsetDefault utf-8
+</IfModule>
+
 RewriteEngine On
 # Если это папка или файл, открываем его
 RewriteCond %{REQUEST_FILENAME} !-f
